crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_1577.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 6
- 41
- 1
- 15
- 0
- 0
- 2
- 2
- 131
- 54
- 250
- 1
- 0
- 1
- 250
- 255
- 0
- 0
- 0
